adding some computations

--- a/Principal_Alt.ipynb
+++ b/Principal_Alt.ipynb
@@ -15,17 +15,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 184,
    "id": "6c079cad-8664-48f3-9fa3-f8af14549c37",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "#227 (generic function with 1 method)"
+       "#305 (generic function with 1 method)"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 185,
    "id": "5229e9a0-f0d3-49ab-8847-dd793d7ad7ef",
    "metadata": {},
    "outputs": [],
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 186,
    "id": "77157ecd-0b26-4261-97bf-a68f86834c3e",
    "metadata": {},
    "outputs": [
@@ -145,7 +145,7 @@
        "Flux_imp! (generic function with 1 method)"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 187,
    "id": "5170ba39-7b17-418a-a098-c8d022f5befd",
    "metadata": {},
    "outputs": [],
@@ -201,22 +201,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 190,
    "id": "f45bd39e-eb40-40c3-a26c-086cb5f971e1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5×5 Matrix{Float64}:\n",
-       " -2.0   0.0   0.0       0.0  0.0\n",
-       " -0.0  -1.0   0.0       0.0  0.0\n",
-       "  0.0   0.0   1.0       0.0  0.0\n",
-       "  0.0   0.0   0.0       1.0  0.0\n",
-       "  0.0   0.0  -0.333333  0.0  1.0"
+       "5×10 Matrix{Float64}:\n",
+       " -12.0   0.0  -20.0       -0.0     -0.0     -2.0  -0.0  -0.0  -0.0  -0.0\n",
+       "  -0.0  -8.0   -0.0      -10.0     -0.0      0.0  -1.0  -0.0  -0.0  -0.0\n",
+       "  -7.5  -0.0   -0.00012   -0.0     -0.0      0.0   0.0   1.0   0.0   0.0\n",
+       "  -0.0  -5.0   -0.0       -6.0e-5  -0.0      0.0   0.0   0.0   1.0   0.0\n",
+       "  -2.5  -0.0   -4.0e-5    -0.0     -1.2e-5   0.0   0.0   0.0   0.0   1.0"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,14 +225,14 @@
     "re = zeros(5)\n",
     "fl = zeros(5)\n",
     "flu=[-1.;0.0;0;0;0];\n",
-    "par_f = [1.,1.0,0.000001]\n",
+    "par_f = [1,1.0,0.000001]\n",
     "con = F_alt!(re,flu,zeros(5), par_f);\n",
     "JFac_f(fl,flu,con,par_f)\n",
     "JFac_c(fl,flu,con,par_f)\n",
     "Jf2c(r,flu,con,par_f) # Notar que para v \\to 1 la matríz se hace singular.\n",
-    "Jf2c(r,flu,con,par_f)*inv(Jf2a_exp1(flu))\n",
-    "#[Jf2c(r,flu,con,par_f) inv(Jf2a_exp1(flu))]\n",
-    "inv(Jf2a_exp1(flu))"
+    "#Jf2c(r,flu,con,par_f)*inv(Jf2a_exp1(flu))\n",
+    "[Jf2c(r,flu,con,par_f) inv(Jf2a_exp1(flu))]\n",
+    "#inv(Jf2a_exp1(flu))"
    ]
   },
   {
@@ -2636,7 +2636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 193,
    "id": "b65f195c-5123-4c6c-906d-4f91a90677ab",
    "metadata": {},
    "outputs": [
@@ -2644,14 +2644,14 @@
      "data": {
       "text/plain": [
        "5×5 Matrix{Float64}:\n",
-       " 24.6082   4.06888     0.0       0.0       0.0\n",
-       "  4.06888  8.52759     0.0       0.0       0.0\n",
-       "  0.0      0.0      -126.014   -43.5858   -3.46026\n",
-       "  0.0      0.0       -26.0628  -68.1974   -8.98326\n",
-       "  0.0      0.0       -40.6162  -26.5063  -14.5461"
+       " 24.0  0.0  -20.0       0.0      0.0\n",
+       "  0.0  8.0    0.0     -10.0      0.0\n",
+       " 15.0  0.0   -0.0012    0.0      0.0\n",
+       "  0.0  5.0    0.0      -0.0006   0.0\n",
+       "  5.0  0.0   -0.0004    0.0     -0.00012"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2659,8 +2659,8 @@
    "source": [
     "re = zeros(5)\n",
     "fl = zeros(5)\n",
-    "flu=[-1.;0.1;0;0;0];\n",
-    "par_f = [1.,-0.,1.]\n",
+    "flu=[-1.;0.0;0;0;0];\n",
+    "par_f = [1.,1.,0.00001]\n",
     "con = F_alt!(re,flu,zeros(5), par_f);\n",
     "JFac_f(fl,flu,con,par_f)\n",
     "JFac_c(fl,flu,con,par_f)\n",
@@ -2669,9 +2669,122 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b48c41c6-7110-43bf-9326-e0734356b5c9",
+   "metadata": {},
+   "source": [
+    "$$T_1^{ab} = \\frac{1}{\\mu^{(d+2)/2}}[\\frac{(d+2)(d+4)}{\\mu^2}\\nu \\xi^a \\xi^b - \\frac{4(d+2)}{\\mu} \\xi^{(a}\\xi^{b)c}\\xi_c -\\frac{d+2}{\\mu} \\nu g^{ab} + 2 \\xi^{ab}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95824a44-84b7-4b2c-bc3d-a0e0185b0c12",
+   "metadata": {},
+   "source": [
+    "To take derivatives and preserve trace-free property we use: $\\frac{\\partial \\xi^{ab}}{\\partial \\xi_{cd}} = g^{a(c}g^{d)b} -\\frac{1}{d} g^{ab}g^{cd}$, and so, $\\frac{\\partial \\nu}{\\partial \\xi_{cd}} = (g^{a(c}g^{d)b} -\\frac{1}{d} g^{ab}g^{cd})\\xi_a \\xi_b = \\xi^c \\xi^d - \\frac{\\mu}{d} g^{cd}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "721ccb68-394c-4647-9e86-c0d94a0b0009",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\frac{\\partial T^{ab}}{\\partial \\xi_{cd}} = \\frac{1}{\\mu^{(d+2)/2}}[\\frac{(d+2)(d+4)}{\\mu^2}(\\xi^c\\xi^d - \\frac{\\mu}{d} g^{cd})\\xi^a \\xi^b  - \\frac{4(d+2)}{\\mu} \\xi^{(a}(g^{b)(c} g^{d)e} - \\frac{1}{d} g^{be} g^{cd})\\xi_e -\\frac{d+2}{\\mu} (\\xi^c \\xi^d - \\frac{\\mu}{d}g^{cd}) g^{ab} + 2 (g^{ac}g^{bd} - \\frac{1}{d}g^{ab}g^{cd})]\n",
+    "$$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f192d97d-db19-42f8-9c22-cbbb7671640b",
+   "id": "9c539e34-702a-4ec3-b62b-3ab72bc65424",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "315b52a5-b96b-4aff-8a76-e8839f8fc9af",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "g^{cd}\\frac{\\partial T^{ab}}{\\partial \\xi_{cd}} = 0\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aeb18168-3ad7-42aa-a4f2-b8cbb435fc3e",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\frac{\\partial T^{00}}{\\partial \\xi_{00}} = \\frac{1}{\\mu^{(d+2)/2}}[\\frac{(d+2)(d+4)}{\\mu^2}(\\xi^0\\xi^0 + \\frac{\\mu}{d} )\\xi^0 \\xi^0  \n",
+    "+ \\frac{4(d+2)}{\\mu} \\xi^{0}\\xi^0 (1 - \\frac{1}{d} )+\\frac{d+2}{\\mu} (\\xi^0 \\xi^0 + \\frac{\\mu}{d}) + 2 (1 - \\frac{1}{d})]\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "471d3b98-8c33-4b3e-9bee-9cb55614b210",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\frac{\\partial T^{00}}{\\partial \\xi_{00}} = \n",
+    "\\frac{1}{\\mu^{(d+2)/2}}[\\frac{(d+2)(d+4)}{d}\n",
+    "(d\\gamma^2  - 1)\\gamma^2\n",
+    "        - \\frac{4(d+2)(d-1)}{d} \\gamma^2 \n",
+    "        + \\frac{d+2}{d} (-d\\gamma^2 + 1) + 2 \\frac{d-1}{d}]\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee38e032-a94d-4b58-951f-8b6c76d857e4",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\frac{\\partial T^{00}}{\\partial \\xi_{11}} = \\frac{1}{\\mu^{(d+2)/2}}[\\frac{(d+2)(d+4)}{\\mu^2}(\\xi^1\\xi^1 - \\frac{\\mu}{d} g^{11})\\xi^0 \\xi^0  - \\frac{4(d+2)}{\\mu} \\xi^{0}(g^{1e} - \\frac{1}{d} g^{0e} g^{11})\\xi_e -\\frac{d+2}{\\mu} (\\xi^1 \\xi^1 - \\frac{\\mu}{d}g^{11}) g^{00} + 2 (g^{01}g^{01} - \\frac{1}{d}g^{00}g^{11})]\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aff59756-8358-4ee6-ad83-35bf639e5f06",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\frac{\\partial T^{00}}{\\partial \\xi_{11}}|_{\\xi^1=0} = \\frac{1}{\\mu^{(d+2)/2}}[-\\frac{(d+2)(d+4)}{\\mu^2}\\frac{\\mu}{d} g^{11}\\xi^0 \\xi^0  + \\frac{4(d+2)}{\\mu} \\xi^{0}\\xi^{0}\\frac{1}{d} g^{00} g^{11})\\xi_e \n",
+    "+\\frac{d+2}{\\mu}\\frac{\\mu}{d}g^{11} g^{00} - 2 \\frac{1}{d}g^{00}g^{11}]\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c1bef4c-b4b4-44a7-b54b-f061c13beea1",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\frac{\\partial T^{00}}{\\partial \\xi_{11}}|_{\\xi^1=0} = \\frac{1}{\\mu^{(d+2)/2}}[-\\frac{(d+2)(d+4)}{\\mu}\\frac{1}{d}\\xi^0 \\xi^0  + \\frac{4(d+2)}{d\\mu} \\xi^{0}\\xi^{0} \n",
+    "-\\frac{(d+2)}{d} + 2 \\frac{1}{d}]\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db66812e-92a2-4d04-8f43-48c9ceaaa2e8",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\frac{\\partial T^{00}}{\\partial \\xi_{11}}|_{\\xi^1=0} = \\frac{1}{\\mu^{(d+2)/2}}[-\\frac{(d+2)}{\\mu}\\xi^0 \\xi^0  \n",
+    "-1] = \\frac{1}{\\mu^{(d+2)/2}}[(d+2)\\gamma^2 - 1] = \\frac{d+1}{\\mu^{(d+2)/2}}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6407541-3d0a-43b1-99d2-fbf3efcdae97",
    "metadata": {},
    "outputs": [],
    "source": []
