cambio en \xi_a

--- a/Principal_Alt.ipynb
+++ b/Principal_Alt.ipynb
@@ -15,17 +15,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 232,
    "id": "6c079cad-8664-48f3-9fa3-f8af14549c37",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "#305 (generic function with 1 method)"
+       "5×5 Matrix{Rational{Int64}}:\n",
+       " 1//1  0//1  0//1   0//1  0//1\n",
+       " 0//1  1//1  0//1   0//1  0//1\n",
+       " 0//1  0//1  3//4   0//1  1//4\n",
+       " 0//1  0//1  0//1  -1//2  0//1\n",
+       " 0//1  0//1  1//4   0//1  3//4"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 232,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 233,
    "id": "5229e9a0-f0d3-49ab-8847-dd793d7ad7ef",
    "metadata": {},
    "outputs": [],
@@ -135,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 234,
    "id": "77157ecd-0b26-4261-97bf-a68f86834c3e",
    "metadata": {},
    "outputs": [
@@ -145,7 +150,7 @@
        "Flux_imp! (generic function with 1 method)"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 234,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 235,
    "id": "5170ba39-7b17-418a-a098-c8d022f5befd",
    "metadata": {},
    "outputs": [],
@@ -201,22 +206,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 237,
    "id": "f45bd39e-eb40-40c3-a26c-086cb5f971e1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5×10 Matrix{Float64}:\n",
-       " -12.0   0.0  -20.0       -0.0     -0.0     -2.0  -0.0  -0.0  -0.0  -0.0\n",
-       "  -0.0  -8.0   -0.0      -10.0     -0.0      0.0  -1.0  -0.0  -0.0  -0.0\n",
-       "  -7.5  -0.0   -0.00012   -0.0     -0.0      0.0   0.0   1.0   0.0   0.0\n",
-       "  -0.0  -5.0   -0.0       -6.0e-5  -0.0      0.0   0.0   0.0   1.0   0.0\n",
-       "  -2.5  -0.0   -4.0e-5    -0.0     -1.2e-5   0.0   0.0   0.0   0.0   1.0"
+       "5×5 Matrix{Float64}:\n",
+       " -71.4017   -12.1788   -81.4629  -17.4569  -28.8514\n",
+       " -11.9912   -26.644    -17.4569  -35.8514  -11.3424\n",
+       "  -4.10364  -10.4304   -95.3755  -21.7929  -34.0987\n",
+       "  -3.96572  -34.5966   -21.7929  -34.0987  -13.2531\n",
+       "  -1.95011   -8.89501  -34.0987  -13.2531  -21.0636"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 237,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,15 +229,15 @@
    "source": [
     "re = zeros(5)\n",
     "fl = zeros(5)\n",
-    "flu=[-1.;0.0;0;0;0];\n",
-    "par_f = [1,1.0,0.000001]\n",
+    "flu=[-1.;0.1;0.0;0.;0.];\n",
+    "par_f = [1,1.0,1.00000]\n",
     "con = F_alt!(re,flu,zeros(5), par_f);\n",
     "JFac_f(fl,flu,con,par_f)\n",
     "JFac_c(fl,flu,con,par_f)\n",
     "Jf2c(r,flu,con,par_f) # Notar que para v \\to 1 la matríz se hace singular.\n",
-    "#Jf2c(r,flu,con,par_f)*inv(Jf2a_exp1(flu))\n",
-    "[Jf2c(r,flu,con,par_f) inv(Jf2a_exp1(flu))]\n",
-    "#inv(Jf2a_exp1(flu))"
+    "Jf2c(r,flu,con,par_f)*inv(Jf2a_exp1(flu))*S\n",
+    "#[Jf2c(r,flu,con,par_f) inv(Jf2a_exp1(flu))]\n",
+    "#inv(Jf2a_exp1(flu))\n"
    ]
   },
   {
@@ -2636,7 +2641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 197,
    "id": "b65f195c-5123-4c6c-906d-4f91a90677ab",
    "metadata": {},
    "outputs": [
@@ -2644,14 +2649,14 @@
      "data": {
       "text/plain": [
        "5×5 Matrix{Float64}:\n",
-       " 24.0  0.0  -20.0       0.0      0.0\n",
-       "  0.0  8.0    0.0     -10.0      0.0\n",
-       " 15.0  0.0   -0.0012    0.0      0.0\n",
-       "  0.0  5.0    0.0      -0.0006   0.0\n",
-       "  5.0  0.0   -0.0004    0.0     -0.00012"
+       " 24.0  0.0  -15.0      0.0     -5.0\n",
+       "  0.0  8.0    0.0      5.0      0.0\n",
+       " 15.0  0.0   -0.0009   0.0     -0.0003\n",
+       "  0.0  5.0    0.0      0.0003   0.0\n",
+       "  5.0  0.0   -0.00033  0.0     -0.00019"
       ]
      },
-     "execution_count": 193,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2665,7 +2670,7 @@
     "JFac_f(fl,flu,con,par_f)\n",
     "JFac_c(fl,flu,con,par_f)\n",
     "(Jf2c(r,flu,con,par_f)) # Notar que para v \\to 1 la matríz se hace singular.\n",
-    "Jf2c(r,flu,con,par_f)*inv(Jf2a_exp1(flu))"
+    "Jf2c(r,flu,con,par_f)*inv(Jf2a_exp1(flu))*S"
    ]
   },
   {
@@ -2694,14 +2699,6 @@
     "\\frac{\\partial T^{ab}}{\\partial \\xi_{cd}} = \\frac{1}{\\mu^{(d+2)/2}}[\\frac{(d+2)(d+4)}{\\mu^2}(\\xi^c\\xi^d - \\frac{\\mu}{d} g^{cd})\\xi^a \\xi^b  - \\frac{4(d+2)}{\\mu} \\xi^{(a}(g^{b)(c} g^{d)e} - \\frac{1}{d} g^{be} g^{cd})\\xi_e -\\frac{d+2}{\\mu} (\\xi^c \\xi^d - \\frac{\\mu}{d}g^{cd}) g^{ab} + 2 (g^{ac}g^{bd} - \\frac{1}{d}g^{ab}g^{cd})]\n",
     "$$"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9c539e34-702a-4ec3-b62b-3ab72bc65424",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2754,7 +2751,7 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\frac{\\partial T^{00}}{\\partial \\xi_{11}}|_{\\xi^1=0} = \\frac{1}{\\mu^{(d+2)/2}}[-\\frac{(d+2)(d+4)}{\\mu^2}\\frac{\\mu}{d} g^{11}\\xi^0 \\xi^0  + \\frac{4(d+2)}{\\mu} \\xi^{0}\\xi^{0}\\frac{1}{d} g^{00} g^{11})\\xi_e \n",
+    "\\frac{\\partial T^{00}}{\\partial \\xi_{11}}|_{\\xi^1=0} = \\frac{1}{\\mu^{(d+2)/2}}[-\\frac{(d+2)(d+4)}{\\mu^2}\\frac{\\mu}{d} g^{11}\\xi^0 \\xi^0  + \\frac{4(d+2)}{\\mu} \\xi^{0}\\frac{1}{d} g^{00} g^{11}\\xi_0\n",
     "+\\frac{d+2}{\\mu}\\frac{\\mu}{d}g^{11} g^{00} - 2 \\frac{1}{d}g^{00}g^{11}]\n",
     "$$"
    ]
@@ -2783,8 +2780,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 195,
    "id": "d6407541-3d0a-43b1-99d2-fbf3efcdae97",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5×5 Matrix{Rational{Int64}}:\n",
+       " 1//1  0//1  0//1   0//1  0//1\n",
+       " 0//1  1//1  0//1   0//1  0//1\n",
+       " 0//1  0//1  3//4   0//1  1//4\n",
+       " 0//1  0//1  0//1  -1//2  0//1\n",
+       " 0//1  0//1  1//4   0//1  3//4"
+      ]
+     },
+     "execution_count": 195,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b69f20fc-b2c6-46cd-bbca-3598f99a4540",
    "metadata": {},
    "outputs": [],
    "source": []
