--- a/Principal_Alt.ipynb
+++ b/Principal_Alt.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 291,
    "id": "6c079cad-8664-48f3-9fa3-f8af14549c37",
    "metadata": {},
    "outputs": [
@@ -23,14 +23,14 @@
      "data": {
       "text/plain": [
        "5×5 Matrix{Rational{Int64}}:\n",
-       " 1//1  0//1  0//1   0//1  0//1\n",
-       " 0//1  1//1  0//1   0//1  0//1\n",
-       " 0//1  0//1  3//4   0//1  1//4\n",
-       " 0//1  0//1  0//1  -1//2  0//1\n",
-       " 0//1  0//1  1//4   0//1  3//4"
+       " 1//1  0//1  0//1  0//1  0//1\n",
+       " 0//1  1//1  0//1  0//1  0//1\n",
+       " 0//1  0//1  3//4  0//1  1//4\n",
+       " 0//1  0//1  0//1  1//2  0//1\n",
+       " 0//1  0//1  1//4  0//1  3//4"
       ]
      },
-     "execution_count": 232,
+     "execution_count": 291,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 254,
    "id": "5229e9a0-f0d3-49ab-8847-dd793d7ad7ef",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 292,
    "id": "77157ecd-0b26-4261-97bf-a68f86834c3e",
    "metadata": {},
    "outputs": [
@@ -150,14 +150,13 @@
        "Flux_imp! (generic function with 1 method)"
       ]
      },
-     "execution_count": 234,
+     "execution_count": 292,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "function Flux_imp!(Fl,flu,con,p)\n",
-    "    S = 1. #+1 normal\n",
     "    χ = p\n",
     "    μ = flu[1]  # esto es -μ\n",
     "    #μ = view(flu,1)\n",
@@ -170,17 +169,21 @@
     "    χ₁ = χ[2]\n",
     "    χ₂ = χ[3]\n",
     "    γ = (1 - v^2)^(-1//2)\n",
+    "    \n",
     "    T11_0 = -8χ₀*T^4*(γ^2*v^2+1//4)\n",
     "    T11_1 = χ₁*(-80//3*T^8*ν*(γ^2*v^2+1//4)  - 20*T^7*r1*γ*v  - 2*T^6*t11)\n",
     "    T11_2 = χ₂*T^8*(ν^2*(-560*T^4*(γ^2*v^2 + 1//4)) - ν*r1*T^3*1120*γ*v - ν*t11*T^2*112\n",
     "                    + r1^2*T^2*(-315v^2-217)\n",
     "                    + r1*t11*T*336*γ*v*(v^2-1)\n",
     "                    + t11^2*(-111 - 78v^2 + 189v^4)/4)\n",
-    "    Fl[1] = S*con[2] #signo cambiado\n",
+    "    A111_1 = -3χ₁*γ*v*T^5*(2γ^2*v^2+1)\n",
+    "    A111_2 = - 12χ₂*T^8*(v*T*10*γ*(2γ^2*v^2+1)*ν + 3*(1+6γ^2*v^2)*r1 + 3v*γ*t11/T)\n",
+    "\n",
+    "    Fl[1] = con[2] \n",
     "    Fl[2] = T11_0 + T11_1 + T11_2\n",
     "    Fl[3] = con[4]\n",
-    "    Fl[4] = S*con[5] #signo cambiado\n",
-    "    Fl[5] = -3χ₁*γ*v*T^5*(2γ^2*v^2+1) - 12χ₂*(v*T*10*γ*(2γ^2*v^2+1)*ν + 3*(1+6γ^2*v^2)*r1 + 3v*γ*t11/T)\n",
+    "    Fl[4] = con[5] \n",
+    "    Fl[5] = A111_1 + A111_2\n",
     "    return -Fl[:]\n",
     "end\n",
     "\n"
@@ -188,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 293,
    "id": "5170ba39-7b17-418a-a098-c8d022f5befd",
    "metadata": {},
    "outputs": [],
@@ -206,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 297,
    "id": "f45bd39e-eb40-40c3-a26c-086cb5f971e1",
    "metadata": {},
    "outputs": [
@@ -214,14 +217,14 @@
      "data": {
       "text/plain": [
        "5×5 Matrix{Float64}:\n",
-       " -71.4017   -12.1788   -81.4629  -17.4569  -28.8514\n",
-       " -11.9912   -26.644    -17.4569  -35.8514  -11.3424\n",
-       "  -4.10364  -10.4304   -95.3755  -21.7929  -34.0987\n",
-       "  -3.96572  -34.5966   -21.7929  -34.0987  -13.2531\n",
-       "  -1.95011   -8.89501  -34.0987  -13.2531  -21.0636"
+       " -63.75    -50.25     -63.9375   -53.4375   -47.1875\n",
+       " -50.25    -43.75     -53.4375   -47.1875   -42.1875\n",
+       " -63.9375  -53.4375  -639.844   -554.906   -497.344\n",
+       " -53.4375  -47.1875  -554.906   -497.344   -451.406\n",
+       " -47.1875  -42.1875  -497.344   -451.406   -414.844"
       ]
      },
-     "execution_count": 237,
+     "execution_count": 297,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +232,7 @@
    "source": [
     "re = zeros(5)\n",
     "fl = zeros(5)\n",
-    "flu=[-1.;0.1;0.0;0.;0.];\n",
+    "flu=[-1.;0.6;0.0;0.;0.];\n",
     "par_f = [1,1.0,1.00000]\n",
     "con = F_alt!(re,flu,zeros(5), par_f);\n",
     "JFac_f(fl,flu,con,par_f)\n",
@@ -250,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 287,
    "id": "dbb9cf55-9414-4477-9db2-e251a3658ffe",
    "metadata": {},
    "outputs": [
@@ -260,7 +263,7 @@
        "PF (generic function with 1 method)"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 287,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 288,
    "id": "d0113b55-adae-4092-9a9e-0f2927e96023",
    "metadata": {},
    "outputs": [
@@ -280,51 +283,25 @@
      "data": {
       "text/plain": [
        "5×5 Matrix{Float64}:\n",
-       " -0.0668896  -0.668896    0.0         0.0         0.0\n",
-       " -0.491689   -0.0668896   0.0         0.0         0.0\n",
-       "  0.0         0.0        -0.0668008  -0.495492    0.00986016\n",
-       "  0.0         0.0        -0.667329   -0.0402414  -0.198197\n",
-       "  0.0         0.0         0.0894254  -1.33466    -0.0734406"
+       " 11.9912   26.644    17.4569  35.8514  11.3424\n",
+       " 24.7679    7.51538  28.8514  11.3424  19.7066\n",
+       "  3.96572  34.5966   21.7929  34.0987  13.2531\n",
+       "  1.95011   8.89501  34.0987  13.2531  21.0636\n",
+       "  2.43036  21.243    13.2531  21.0636   9.53755"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 288,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "PF(r,fl,flu,con,par_f)"
+    "(JFac_f(fl,flu,con,par_f) + JFac_c(fl,con,flu,par_f)*Jf2c(r,flu,con,par_f))*inv(Jf2a_exp1(flu))*S"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "cedd5e04-1bc4-4829-a390-dc9906dc49cd",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5×5 Matrix{Float64}:\n",
-       " 4.06888  8.52759   0.0      0.0      0.0\n",
-       " 8.52759  2.46082   0.0      0.0      0.0\n",
-       " 0.0      0.0      26.0628  68.1974   8.98326\n",
-       " 0.0      0.0      40.6162  26.5063  14.5461\n",
-       " 0.0      0.0      15.1109  42.1273   7.67976"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(JFac_f(fl,flu,con,par_f) + JFac_c(fl,con,flu,par_f)*Jf2c(r,flu,con,par_f))*inv(Jf2a_exp1(flu))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 284,
    "id": "e1f323ba-7afd-4388-8b87-ecfbda881d52",
    "metadata": {},
    "outputs": [
@@ -339,7 +316,7 @@
        "  0.0   0.0   0.0  -0.3   0.0"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 284,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 285,
    "id": "b4ce8fe8-66d7-4812-a254-a7f1599942e8",
    "metadata": {},
    "outputs": [
@@ -374,7 +351,7 @@
        "  0.0   0.0   0.0  -0.3   0.0"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 285,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2687,7 +2664,8 @@
    "id": "95824a44-84b7-4b2c-bc3d-a0e0185b0c12",
    "metadata": {},
    "source": [
-    "To take derivatives and preserve trace-free property we use: $\\frac{\\partial \\xi^{ab}}{\\partial \\xi_{cd}} = g^{a(c}g^{d)b} -\\frac{1}{d} g^{ab}g^{cd}$, and so, $\\frac{\\partial \\nu}{\\partial \\xi_{cd}} = (g^{a(c}g^{d)b} -\\frac{1}{d} g^{ab}g^{cd})\\xi_a \\xi_b = \\xi^c \\xi^d - \\frac{\\mu}{d} g^{cd}$"
+    "To take derivatives and preserve trace-free property we use: $\\frac{\\partial \\xi^{ab}}{\\partial \\xi_{cd}} = g^{a(c}g^{d)b} -\\frac{1}{d} g^{ab}g^{cd}$, $\\frac{\\partial \\xi_{ab}}{\\partial \\xi_{cd}} = \\delta_a{}^{(c}\\delta_b{}^{d)} -\\frac{1}{d} \n",
+    "g_{ab}g^{cd}$, and so, $\\frac{\\partial \\nu}{\\partial \\xi_{cd}} = (g^{a(c}g^{d)b} -\\frac{1}{d} g^{ab}g^{cd})\\xi_a \\xi_b = \\xi^c \\xi^d - \\frac{\\mu}{d} g^{cd}$"
    ]
   },
   {
@@ -2696,7 +2674,7 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\frac{\\partial T^{ab}}{\\partial \\xi_{cd}} = \\frac{1}{\\mu^{(d+2)/2}}[\\frac{(d+2)(d+4)}{\\mu^2}(\\xi^c\\xi^d - \\frac{\\mu}{d} g^{cd})\\xi^a \\xi^b  - \\frac{4(d+2)}{\\mu} \\xi^{(a}(g^{b)(c} g^{d)e} - \\frac{1}{d} g^{be} g^{cd})\\xi_e -\\frac{d+2}{\\mu} (\\xi^c \\xi^d - \\frac{\\mu}{d}g^{cd}) g^{ab} + 2 (g^{ac}g^{bd} - \\frac{1}{d}g^{ab}g^{cd})]\n",
+    "\\frac{\\partial T_1^{ab}}{\\partial \\xi_{cd}} = \\frac{1}{\\mu^{(d+2)/2}}[\\frac{(d+2)(d+4)}{\\mu^2}(\\xi^c\\xi^d - \\frac{\\mu}{d} g^{cd})\\xi^a \\xi^b  - \\frac{4(d+2)}{\\mu} \\xi^{(a}(g^{b)(c} g^{d)e} - \\frac{1}{d} g^{be} g^{cd})\\xi_e -\\frac{d+2}{\\mu} (\\xi^c \\xi^d - \\frac{\\mu}{d}g^{cd}) g^{ab} + 2 (g^{ac}g^{bd} - \\frac{1}{d}g^{ab}g^{cd})]\n",
     "$$"
    ]
   },
@@ -2716,7 +2694,7 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\frac{\\partial T^{00}}{\\partial \\xi_{00}} = \\frac{1}{\\mu^{(d+2)/2}}[\\frac{(d+2)(d+4)}{\\mu^2}(\\xi^0\\xi^0 + \\frac{\\mu}{d} )\\xi^0 \\xi^0  \n",
+    "\\frac{\\partial T_1^{00}}{\\partial \\xi_{00}} = \\frac{1}{\\mu^{(d+2)/2}}[\\frac{(d+2)(d+4)}{\\mu^2}(\\xi^0\\xi^0 + \\frac{\\mu}{d} )\\xi^0 \\xi^0  \n",
     "+ \\frac{4(d+2)}{\\mu} \\xi^{0}\\xi^0 (1 - \\frac{1}{d} )+\\frac{d+2}{\\mu} (\\xi^0 \\xi^0 + \\frac{\\mu}{d}) + 2 (1 - \\frac{1}{d})]\n",
     "$$"
    ]
@@ -2727,7 +2705,7 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\frac{\\partial T^{00}}{\\partial \\xi_{00}} = \n",
+    "\\frac{\\partial T_1^{00}}{\\partial \\xi_{00}} = \n",
     "\\frac{1}{\\mu^{(d+2)/2}}[\\frac{(d+2)(d+4)}{d}\n",
     "(d\\gamma^2  - 1)\\gamma^2\n",
     "        - \\frac{4(d+2)(d-1)}{d} \\gamma^2 \n",
@@ -2751,7 +2729,7 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\frac{\\partial T^{00}}{\\partial \\xi_{11}}|_{\\xi^1=0} = \\frac{1}{\\mu^{(d+2)/2}}[-\\frac{(d+2)(d+4)}{\\mu^2}\\frac{\\mu}{d} g^{11}\\xi^0 \\xi^0  + \\frac{4(d+2)}{\\mu} \\xi^{0}\\frac{1}{d} g^{00} g^{11}\\xi_0\n",
+    "\\frac{\\partial T_1^{00}}{\\partial \\xi_{11}}|_{\\xi^1=0} = \\frac{1}{\\mu^{(d+2)/2}}[-\\frac{(d+2)(d+4)}{\\mu^2}\\frac{\\mu}{d} g^{11}\\xi^0 \\xi^0  + \\frac{4(d+2)}{\\mu} \\xi^{0}\\frac{1}{d} g^{00} g^{11}\\xi_0\n",
     "+\\frac{d+2}{\\mu}\\frac{\\mu}{d}g^{11} g^{00} - 2 \\frac{1}{d}g^{00}g^{11}]\n",
     "$$"
    ]
@@ -2762,7 +2740,7 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\frac{\\partial T^{00}}{\\partial \\xi_{11}}|_{\\xi^1=0} = \\frac{1}{\\mu^{(d+2)/2}}[-\\frac{(d+2)(d+4)}{\\mu}\\frac{1}{d}\\xi^0 \\xi^0  + \\frac{4(d+2)}{d\\mu} \\xi^{0}\\xi^{0} \n",
+    "\\frac{\\partial T_1^{00}}{\\partial \\xi_{11}}|_{\\xi^1=0} = \\frac{1}{\\mu^{(d+2)/2}}[-\\frac{(d+2)(d+4)}{\\mu}\\frac{1}{d}\\xi^0 \\xi^0  + \\frac{4(d+2)}{d\\mu} \\xi^{0}\\xi^{0} \n",
     "-\\frac{(d+2)}{d} + 2 \\frac{1}{d}]\n",
     "$$"
    ]
@@ -2773,7 +2751,7 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\frac{\\partial T^{00}}{\\partial \\xi_{11}}|_{\\xi^1=0} = \\frac{1}{\\mu^{(d+2)/2}}[-\\frac{(d+2)}{\\mu}\\xi^0 \\xi^0  \n",
+    "\\frac{\\partial T_1^{00}}{\\partial \\xi_{11}}|_{\\xi^1=0} = \\frac{1}{\\mu^{(d+2)/2}}[-\\frac{(d+2)}{\\mu}\\xi^0 \\xi^0  \n",
     "-1] = \\frac{1}{\\mu^{(d+2)/2}}[(d+2)\\gamma^2 - 1] = \\frac{d+1}{\\mu^{(d+2)/2}}\n",
     "$$"
    ]
