--- a/calculos_new.ipynb
+++ b/calculos_new.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 100,
    "id": "34d9873d-f9a2-4655-bceb-e031b8da292f",
    "metadata": {},
    "outputs": [
@@ -107,14 +107,14 @@
      "data": {
       "text/latex": [
        "\\begin{equation}\n",
-       " - 12 \\chi{_2} \\left( T \\nu \\left( 20 u1^{3} + 10 g11 u1 \\right) + 3 g11 r1 + 18 u1^{2} r1 + \\frac{3 t11 u1}{T} \\right)\n",
+       " - 12 T^{8} \\chi{_2} \\left( T \\nu \\left( 20 u1^{3} + 10 g11 u1 \\right) + 3 g11 r1 + 18 u1^{2} r1 + \\frac{3 t11 u1}{T} \\right)\n",
        "\\end{equation}\n"
       ],
       "text/plain": [
-       "-12χ₂*(T*ν*((20//1)*(u1^3) + (10//1)*g11*u1) + 3g11*r1 + 18r1*(u1^2) + 3t11*u1*(T^-1))"
+       "-12χ₂*(T*ν*((20//1)*(u1^3) + (10//1)*g11*u1) + 3g11*r1 + 18r1*(u1^2) + 3t11*u1*(T^-1))*(T^8)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,12 +122,12 @@
    "source": [
     "A111_2 = -12χ₂*(ν*T*(10*u1*g11 + 10*g11*u1 + 10*g11*u1 + 60u1*u1*u1)//3 \n",
     "         + (6r1*u1*u1 + 6r1*u1*u1 + g11*r1 + g11*r1 + 6r1*u1*u1 \n",
-    "         + r1*g11) + (t11*u1 + t11*u1 + u1*t11)/T)"
+    "         + r1*g11) + (t11*u1 + t11*u1 + u1*t11)/T)*T^8"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 102,
    "id": "a582ce7b-8a9a-48d0-8120-e33b982be772",
    "metadata": {},
    "outputs": [
@@ -135,14 +135,14 @@
      "data": {
       "text/latex": [
        "\\begin{equation}\n",
-       " - 12 \\chi{_2} \\left( g11 r0 + \\frac{\\left( t11 u0 + 2 t01 u1 \\right)}{T} + T \\nu \\left( \\frac{20}{3} g01 u1 + \\frac{10}{3} g11 u0 + 20 u1^{2} u0 \\right) + 2 g01 r1 + 6 u1^{2} r0 + 12 r1 u0 u1 \\right)\n",
+       " - 12 T^{8} \\chi{_2} \\left( g11 r0 + \\frac{\\left( t11 u0 + 2 t01 u1 \\right)}{T} + T \\nu \\left( \\frac{20}{3} g01 u1 + \\frac{10}{3} g11 u0 + 20 u1^{2} u0 \\right) + 2 g01 r1 + 6 u1^{2} r0 + 12 r1 u0 u1 \\right)\n",
        "\\end{equation}\n"
       ],
       "text/plain": [
-       "-12χ₂*(g11*r0 + (T^-1)*(t11*u0 + 2t01*u1) + T*ν*((20//3)*g01*u1 + (10//3)*g11*u0 + (20//1)*u0*(u1^2)) + 2g01*r1 + 6r0*(u1^2) + 12r1*u0*u1)"
+       "-12χ₂*(g11*r0 + (T^-1)*(t11*u0 + 2t01*u1) + T*ν*((20//3)*g01*u1 + (10//3)*g11*u0 + (20//1)*u0*(u1^2)) + 2g01*r1 + 6r0*(u1^2) + 12r1*u0*u1)*(T^8)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,12 +150,12 @@
    "source": [
     "A011_2 = -12χ₂*(ν*T*(10*u0*g11 + 10*g01*u1 + 10*g01*u1 + 60u0*u1*u1)//3 \n",
     "    + (6r1*u1*u0 + 6r1*u0*u1 + g01*r1 + g01*r1 + 6r0*u1*u1 \n",
-    "        + r0*g11) + (t01*u1 + t01*u1 + u0*t11)/T)"
+    "        + r0*g11) + (t01*u1 + t01*u1 + u0*t11)/T)*T^8"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 103,
    "id": "ecdc7ba9-5e99-43e9-83e5-51e8f4e24c20",
    "metadata": {},
    "outputs": [
@@ -163,14 +163,14 @@
      "data": {
       "text/latex": [
        "\\begin{equation}\n",
-       " - 12 \\chi{_2} \\left( g00 r1 + \\frac{\\left( t00 u1 + 2 t01 u0 \\right)}{T} + T \\nu \\left( \\frac{10}{3} g00 u1 + \\frac{20}{3} g01 u0 + 20 u0^{2} u1 \\right) + 2 g01 r0 + 6 u0^{2} r1 + 12 r0 u0 u1 \\right)\n",
+       " - 12 T^{8} \\chi{_2} \\left( g00 r1 + \\frac{\\left( t00 u1 + 2 t01 u0 \\right)}{T} + T \\nu \\left( \\frac{10}{3} g00 u1 + \\frac{20}{3} g01 u0 + 20 u0^{2} u1 \\right) + 2 g01 r0 + 6 u0^{2} r1 + 12 r0 u0 u1 \\right)\n",
        "\\end{equation}\n"
       ],
       "text/plain": [
-       "-12χ₂*(g00*r1 + (T^-1)*(t00*u1 + 2t01*u0) + T*ν*((10//3)*g00*u1 + (20//3)*g01*u0 + (20//1)*u1*(u0^2)) + 2g01*r0 + 6r1*(u0^2) + 12r0*u0*u1)"
+       "-12χ₂*(g00*r1 + (T^-1)*(t00*u1 + 2t01*u0) + T*ν*((10//3)*g00*u1 + (20//3)*g01*u0 + (20//1)*u1*(u0^2)) + 2g01*r0 + 6r1*(u0^2) + 12r0*u0*u1)*(T^8)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,12 +178,12 @@
    "source": [
     "A001_2 = -12χ₂*(ν*T*(10*u0*g01 + 10*g00*u1 + 10*g01*u0  + 60u0*u0*u1)//3 \n",
     "    + (6r1*u0*u0 + 6r0*u0*u1 + g00*r1 + g01*r0 + 6r0*u0*u1 \n",
-    "        + r0*g01) + (t00*u1 + t01*u0 + u0*t01)/T)"
+    "        + r0*g01) + (t00*u1 + t01*u0 + u0*t01)/T)*T^8"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 104,
    "id": "4c701ed4-e202-4c74-8640-e8a93b1b3b49",
    "metadata": {},
    "outputs": [
@@ -191,14 +191,14 @@
      "data": {
       "text/latex": [
        "\\begin{equation}\n",
-       " - 12 \\chi{_2} \\left( T \\nu \\left( 20 u0^{3} + 10 g00 u0 \\right) + 3 g00 r0 + 18 u0^{2} r0 + \\frac{3 t00 u0}{T} \\right)\n",
+       " - 12 T^{8} \\chi{_2} \\left( T \\nu \\left( 20 u0^{3} + 10 g00 u0 \\right) + 3 g00 r0 + 18 u0^{2} r0 + \\frac{3 t00 u0}{T} \\right)\n",
        "\\end{equation}\n"
       ],
       "text/plain": [
-       "-12χ₂*(T*ν*((20//1)*(u0^3) + (10//1)*g00*u0) + 3g00*r0 + 18r0*(u0^2) + 3t00*u0*(T^-1))"
+       "-12χ₂*(T*ν*((20//1)*(u0^3) + (10//1)*g00*u0) + 3g00*r0 + 18r0*(u0^2) + 3t00*u0*(T^-1))*(T^8)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,12 +206,12 @@
    "source": [
     "A000_2 = -12χ₂*(ν*T*(10*u0*g00 + 20*g00*u0 + 60u0*u0*u0)//3 \n",
     "    + (6r0*u0*u0 + 6r0*u0*u0 + g00*r0 + g00*r0 + 6r0*u0*u0 \n",
-    "        + r0*g00) + (t00*u0 + t00*u0 + u0*t00)/T)"
+    "        + r0*g00) + (t00*u0 + t00*u0 + u0*t00)/T)*T^8"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 105,
    "id": "a7d58275-ef40-4fdf-8d73-5cf80e63a6bb",
    "metadata": {},
    "outputs": [
@@ -219,14 +219,14 @@
      "data": {
       "text/latex": [
        "\\begin{equation}\n",
-       " - 12 \\chi{_2} \\left( T \\nu \\left(  - 10 \\gamma + 20 \\gamma^{3} \\right) - 3 r1 v + 18 \\gamma^{2} r1 v + \\frac{3 v^{2} t11 \\gamma}{T} \\right)\n",
+       " - 12 T^{8} \\chi{_2} \\left( T \\nu \\left(  - 10 \\gamma + 20 \\gamma^{3} \\right) - 3 r1 v + 18 \\gamma^{2} r1 v + \\frac{3 v^{2} t11 \\gamma}{T} \\right)\n",
        "\\end{equation}\n"
       ],
       "text/plain": [
-       "-12χ₂*(T*ν*((20//1)*(γ^3) - ((10//1)*γ)) + 18r1*v*(γ^2) + 3t11*γ*(T^-1)*(v^2) - (3r1*v))"
+       "-12χ₂*(T*ν*((20//1)*(γ^3) - ((10//1)*γ)) + 18r1*v*(γ^2) + 3t11*γ*(T^-1)*(v^2) - (3r1*v))*(T^8)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 109,
+   "id": "50c5eb05-d989-463f-85ad-89d001610e99",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "\\begin{equation}\n",
+       " - 12 T^{8} \\chi{_2} \\left(  - r1 v \\left( 3 - 18 \\gamma^{2} \\right) - 10 T \\gamma \\nu \\left( 1 - 2 \\gamma^{2} \\right) + \\frac{3 v^{2} t11 \\gamma}{T} \\right)\n",
+       "\\end{equation}\n"
+      ],
+      "text/plain": [
+       "-12χ₂*(3t11*γ*(T^-1)*(v^2) - (r1*v*(3 - (18(γ^2)))) - (10T*γ*ν*(1 - (2(γ^2)))))*(T^8)"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A2_000 = -12T^8*χ₂*(-10T*ν*γ*(1 - 2γ^2) - 3*(1 - 6γ^2)*r1*v + 3v^2*t11*γ/T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
    "id": "aabb1171-f408-4b99-a01e-942b847ca2e6",
    "metadata": {},
    "outputs": [
@@ -245,14 +271,14 @@
      "data": {
       "text/latex": [
        "\\begin{equation}\n",
-       " - 12 \\chi{_2} \\left(  - r1 + \\frac{\\left( v^{3} t11 \\gamma + 2 t11 v \\gamma \\right)}{T} + T \\nu \\left(  - \\frac{10}{3} v \\gamma + 20 \\gamma^{3} v \\right) + 6 \\gamma^{2} r1 + 12 \\gamma^{2} v^{2} r1 \\right)\n",
+       " - 12 T^{8} \\chi{_2} \\left(  - r1 + \\frac{\\left( v^{3} t11 \\gamma + 2 t11 v \\gamma \\right)}{T} + T \\nu \\left(  - \\frac{10}{3} v \\gamma + 20 \\gamma^{3} v \\right) + 6 \\gamma^{2} r1 + 12 \\gamma^{2} v^{2} r1 \\right)\n",
        "\\end{equation}\n"
       ],
       "text/plain": [
-       "-12χ₂*((T^-1)*(t11*γ*(v^3) + 2t11*v*γ) + T*ν*((20//1)*v*(γ^3) - ((10//3)*v*γ)) + 6r1*(γ^2) + 12r1*(v^2)*(γ^2) - r1)"
+       "-12χ₂*((T^-1)*(t11*γ*(v^3) + 2t11*v*γ) + T*ν*((20//1)*v*(γ^3) - ((10//3)*v*γ)) + 6r1*(γ^2) + 12r1*(v^2)*(γ^2) - r1)*(T^8)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 107,
    "id": "bb3d26f2-2d0b-40bb-8d29-b811eb259a67",
    "metadata": {},
    "outputs": [
@@ -271,14 +297,14 @@
      "data": {
       "text/latex": [
        "\\begin{equation}\n",
-       " - 12 \\chi{_2} \\left( r1 v + \\frac{\\left( t11 \\gamma + 2 v^{2} t11 \\gamma \\right)}{T} + T \\nu \\left( \\frac{10}{3} \\gamma + 20 \\gamma^{3} v^{2} \\right) + 12 \\gamma^{2} r1 v + 6 \\gamma^{2} v^{3} r1 \\right)\n",
+       " - 12 T^{8} \\chi{_2} \\left( r1 v + \\frac{\\left( t11 \\gamma + 2 v^{2} t11 \\gamma \\right)}{T} + T \\nu \\left( \\frac{10}{3} \\gamma + 20 \\gamma^{3} v^{2} \\right) + 12 \\gamma^{2} r1 v + 6 \\gamma^{2} v^{3} r1 \\right)\n",
        "\\end{equation}\n"
       ],
       "text/plain": [
-       "-12χ₂*(r1*v + (T^-1)*(t11*γ + 2t11*γ*(v^2)) + T*ν*((10//3)*γ + (20//1)*(v^2)*(γ^3)) + 12r1*v*(γ^2) + 6r1*(v^3)*(γ^2))"
+       "-12χ₂*(r1*v + (T^-1)*(t11*γ + 2t11*γ*(v^2)) + T*ν*((10//3)*γ + (20//1)*(v^2)*(γ^3)) + 12r1*v*(γ^2) + 6r1*(v^3)*(γ^2))*(T^8)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 108,
    "id": "a98146d8-d534-4d7b-8bb3-e6b073bec140",
    "metadata": {},
    "outputs": [
@@ -297,14 +323,14 @@
      "data": {
       "text/latex": [
        "\\begin{equation}\n",
-       " - 12 \\chi{_2} \\left( 3 r1 + T \\nu \\left( 10 v \\gamma + 20 \\gamma^{3} v^{3} \\right) + 18 \\gamma^{2} v^{2} r1 + \\frac{3 t11 v \\gamma}{T} \\right)\n",
+       " - 12 T^{8} \\chi{_2} \\left( 3 r1 + T \\nu \\left( 10 v \\gamma + 20 \\gamma^{3} v^{3} \\right) + 18 \\gamma^{2} v^{2} r1 + \\frac{3 t11 v \\gamma}{T} \\right)\n",
        "\\end{equation}\n"
       ],
       "text/plain": [
-       "-12χ₂*(3r1 + T*ν*((10//1)*v*γ + (20//1)*(v^3)*(γ^3)) + 18r1*(v^2)*(γ^2) + 3t11*v*γ*(T^-1))"
+       "-12χ₂*(3r1 + T*ν*((10//1)*v*γ + (20//1)*(v^3)*(γ^3)) + 18r1*(v^2)*(γ^2) + 3t11*v*γ*(T^-1))*(T^8)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
